feat : "environment variable by properties"

--- a/2-back-end/src/main/resources/application.properties
+++ b/2-back-end/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost/madatrans
 
+### Please personalize and uncomment this information appropriately:
+# ------->
+
+# spring.datasource.username={postgres_username}
+# spring.datasource.password= {your_password}
+
+
+# for example:
+spring.datasource.username=postgres
+spring.datasource.password=12345678
